sensor-demo/deployment_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
      - name: web
        imagePullPolicy: Always
