sensor-demo/ingress_route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - http-public
  routes:
  - match: Host(`sensor-demo.lainecloud.com`)
    kind: Rule
    services:
    - name: sensor-demo-web
      port: 80
